<resources>
  <string name="app_name">Droid Cast</string>

  <!-- Home view -->
  <string name="home_connect_button">Connect</string>
  <string name="home_type_code">Type code here</string>
  <string name="home_welcome_message">Enter a code below to connect to a session.</string>
  <string name="home_code_not_empty">Code can\'t be empty.</string>
  <string name="home_click_here_to_share">Click here to share\nyour screen</string>

  <!-- Media Share activity -->
  <string name="label_permissions">Please enable Microphone permission.</string>
  <string name="media_share_give_code">Share this code with other user:</string>
  <string name="share_pc_link_button">Share PC Link</string>
  <string name="share_app_link_button">Share App Link</string>
  <string name="media_share_nsd_error">There was an error, please try again.</string>
  <string name="media_share_text_pc">Open this link in a Media Player (e.g. VLC) to connect to a
    Droid Cast session: %1$s
  </string>
  <string name="media_share_text_app">Click this link to connect to a Droid Cast session: %1$s
  </string>
  <string name="media_share_chooser_title">Share link:</string>
  <string name="media_share_text_subject">Droid Cast link</string>

  <!-- Notification -->
  <string name="manage_streaming">Droid Cast session: %1$s.</string>
  <string name="streaming_clients">Number of users: %1$d.</string>
  <string name="notification_stop">Finish session</string>
  <string name="mute_micro">Mute microphone</string>
  <string name="enable_micro">Mute microphone</string>
  <string name="notification_new_connection">New connection</string>

  <!-- Video activity -->
  <string name="video_activity_looking_for_host">Looking for host</string>
  <string name="video_activity_host_found">Host found</string>
  <string name="video_activity_connecting">Establishing connection</string>
  <string name="video_activity_connected">Connected!</string>
  <string name="video_activity_session_not_found">Host couldn\'t be found</string>
  <string name="video_stop_dialog_title">Stop streaming</string>
  <string name="video_stop_dialog_body">Do you want to finish this session?</string>
  <string name="cancel">Cancel</string>

  <!-- Session finished -->
  <string name="session_finished_close">Close</string>
  <string name="session_finished">Session has finished.</string>
  <string name="session_finished_by_server">Session has been finished by the server.</string>

  <!-- Streaming started -->
  <string name="streaming_started">Streaming has started, your screen is now visible by the
    client.
  </string>
  <string name="enable_microphone">Enable microphone</string>
  <string name="enable_from_notification">(You can also enable it from the status bar notification)
  </string>

</resources>
