<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.app.droidcast.SessionFinishActivity">

  <TextView
      android:id="@+id/streaming_started_textview"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:alpha="0"
      android:gravity="center_vertical"
      android:text="@string/streaming_started"
      android:textAlignment="center"
      android:textColor="#fff"
      android:textSize="18sp"
      android:textStyle="bold"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical">
    <Switch
        android:id="@+id/enable_microphone_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:checked="false"
        android:switchPadding="4dp"
        android:text="@string/enable_microphone"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/enable_microphone_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enable_from_notification"
        android:textColor="#fff"
        android:textSize="12sp"/>
  </LinearLayout>


  <TextView
      android:id="@+id/streaming_started_close_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="20dp"
      android:padding="@dimen/activity_vertical_margin"
      android:text="@string/session_finished_close"
      android:textColor="#fff"/>
</LinearLayout>
