<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.antonio.droidcast.HomeActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/home_welcome_message"/>

  <LinearLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical">
    <EditText
        android:id="@+id/home_code_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/home_type_code"
        android:inputType="number"
        android:maxLength="6"
        android:padding="@dimen/activity_half_margin"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/home_connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/activity_half_margin"
        android:text="@string/home_connect_button"/>
  </LinearLayout>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/home_stream_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:src="@drawable/ic_media_route_off_holo_dark"
  />
</RelativeLayout>
